--- a/MusicIntervalQuizMaster/ja.lproj/Localizable.strings
+++ b/MusicIntervalQuizMaster/ja.lproj/Localizable.strings
@@ -176,4 +176,25 @@
 "not_available" = "ご利用いただけません。";
 "ok_button" = "確認";
 
+"country_prefix" = "ja";
 
+"script_1_title" = "楽譜を見てキーボードを押し、音程を入力してください。";
+"script_1_body" = "入力された音程が画面に表示されます。キーボードは直感的な構造で、左側は音程の性質、右側は度数を表します。";
+
+"script_2_title" = "音程を入力し、エンターキーを押して正解を確認。";
+"script_2_body" = "楽譜をタップすると再生されます。[🔊 AUTO] ボタンを押すと、問題が出題される際に自動再生されます。";
+
+"script_3_title" = "セッションの状況とタイマーは上部に表示されます。";
+"script_3_body" = "タイマーを設定して時間内に問題を解くことができます。時間切れになると不正解と見なされます。";
+
+"script_4_title" = "アプリを閉じなければ、無数の問題を解くことができます！";
+"script_4_body" = "正解を出さなければ次の問題に進めません。間違えても再挑戦しましょう！";
+
+"script_5_title" = "統計タブで弱点と強みを分析し、学習計画を立てましょう。";
+"script_5_body" = "希望するカテゴリの結果だけをフィルターで表示できます。グラフをスライドすると詳細データが確認できます。";
+
+"script_6_title" = "問題解決の条件をシンプルまたは詳細に設定。";
+"script_6_body" = "複合音程、臨時記号、音部記号など、細かい問題条件を設定できます。";
+
+"script_7_title" = "アプリの設定をカスタマイズして、学習環境を最適化。";
+"script_7_body" = "タイマー、自動スキップ、ハプティック、テーマを調整して没入感を高めましょう。";
