--- a/MusicIntervalQuizMaster/ko.lproj/Localizable.strings
+++ b/MusicIntervalQuizMaster/ko.lproj/Localizable.strings
@@ -175,3 +175,26 @@
 "inquiry_body" = "문의 사항이나 피드백을 작성해 주세요.";
 "not_available" = "사용할 수 없습니다.";
 "ok_button" = "확인";
+
+"country_prefix" = "ko";
+
+"script_1_title" = "악보를 보고 키보드를 눌러 음정을 입력하세요.";
+"script_1_body" = "입력된 음정이 화면에 표시됩니다. 키보드는 직관적인 구조로 되어 있습니다. 왼쪽은 음정의 성질, 오른쪽은 도수입니다.";
+
+"script_2_title" = "음정을 입력하고 엔터를 누르면 정답 여부가 표시됩니다.";
+"script_2_body" = "악보를 터치하면 재생됩니다. [🔊 AUTO] 버튼을 누르면 문제 출제 시 자동 재생됩니다.";
+
+"script_3_title" = "현재 세션 상황과 타이머는 상단에 표시됩니다.";
+"script_3_body" = "타이머를 설정해 제한 시간 안에 문제를 풀 수 있습니다. 제한 시간 초과 시 틀린 것으로 처리됩니다.";
+
+"script_4_title" = "앱을 끄지 않는 한 매우 많은 문제를 풀 수 있어요!";
+"script_4_body" = "정답을 맞춰야 다음 문제로 넘어갑니다. 틀리더라도 다시 도전하세요!";
+
+"script_5_title" = "통계 탭에서 취약점과 강점을 분석하고 학습 계획을 세우세요.";
+"script_5_body" = "필터로 원하는 카테고리의 결과만 확인 가능합니다. 그래프를 슬라이드해 세부 데이터를 볼 수 있습니다.";
+
+"script_6_title" = "문제풀이 조건을 간단히 혹은 자세히 설정하세요.";
+"script_6_body" = "복합음정, 임시표, 음자리표 등의 세밀한 문제 조건 설정이 가능합니다.";
+
+"script_7_title" = "앱 설정으로 학습 환경을 조정해보세요.";
+"script_7_body" = "타이머, 자동넘김, 햅틱, 테마를 설정해 몰입감을 높이세요.";
