Chore: prepare scrennshots for AppStore Connect

--- a/MusicIntervalQuizMaster/ja.lproj/Localizable.strings
+++ b/MusicIntervalQuizMaster/ja.lproj/Localizable.strings
@@ -198,3 +198,9 @@
 
 "script_7_title" = "アプリの設定をカスタマイズして、学習環境を最適化。";
 "script_7_body" = "タイマー、自動スキップ、ハプティック、テーマを調整して没入感を高めましょう。";
+
+"appstore_screenshots_1" = "難しい音程の勉強\n楽譜と音でクイズを簡単に解こう";
+"appstore_screenshots_2" = "専用キーボードで便利に\n答えを入力して採点";
+"appstore_screenshots_3" = "マスターするまで！\nたくさんの問題があるよ";
+"appstore_screenshots_4" = "統計機能を活用して\n計画的な学習が可能";
+"appstore_screenshots_5" = "問題範囲を決めて\n方式も自分好みに設定";
