--- a/MusicIntervalQuizMaster/ko.lproj/Localizable.strings
+++ b/MusicIntervalQuizMaster/ko.lproj/Localizable.strings
@@ -198,3 +198,9 @@
 
 "script_7_title" = "앱 설정으로 학습 환경을 조정해보세요.";
 "script_7_body" = "타이머, 자동넘김, 햅틱, 테마를 설정해 몰입감을 높이세요.";
+
+"appstore_screenshots_1" = "어려운 음정 공부\n퀴즈로 쉽게 풀어요";
+"appstore_screenshots_2" = "전용 키보드로 편리하게\n정답을 입력하고 채점";
+"appstore_screenshots_3" = "틀렸다면 맞출때까지!\n누구나 음정 마스터";
+"appstore_screenshots_4" = "통계 기능을 이용해\n계획적인 학습 가능";
+"appstore_screenshots_5" = "문제 범위를 정하고\n방식도 내 마음대로 설정";
