--- a/MusicIntervalQuizMaster/en.lproj/Localizable.strings
+++ b/MusicIntervalQuizMaster/en.lproj/Localizable.strings
@@ -198,3 +198,9 @@
 
 "script_7_title" = "Customize the app settings to optimize your learning.";
 "script_7_body" = "Adjust timers, auto-skip, haptic feedback, and themes to enhance immersion.";
+
+"appstore_screenshots_1" = "Struggling with interval study?\nMaster intervals through drills with quizzes";
+"appstore_screenshots_2" = "Conveniently use the dedicated keyboard\nEnter your answers and get graded";
+"appstore_screenshots_3" = "Wrong answers? Keep trying until you succeed!\nMaster interval with endless questions";
+"appstore_screenshots_4" = "Use the statistics feature\nPlan your studies effectively";
+"appstore_screenshots_5" = "Set the question range\nCustomize the method to your preference";
