--- a/MusicIntervalQuizMaster/ja.lproj/Localizable.strings
+++ b/MusicIntervalQuizMaster/ja.lproj/Localizable.strings
@@ -204,3 +204,14 @@
 "appstore_screenshots_3" = "マスターするまで！\nたくさんの問題があるよ";
 "appstore_screenshots_4" = "統計機能を活用して\n計画的な学習が可能";
 "appstore_screenshots_5" = "問題範囲を決めて\n方式も自分好みに設定";
+
+"reminder_noti_title" = "リマインダーアラーム設定";
+"reminder_noti_toggle" = "リマインダーアラームをオンにする";
+"for_every_day" = "毎日：";
+
+"local_noti_body_1" = "🎶 今日の音程 🎶";
+"local_noti_body_2" = "ご存じですか？ %@ と %@ の間の音程は";
+"local_noti_body_3" = "[%@] です。";
+"local_noti_body_4" = "アプリを開いて、もっと音程を学びましょう！";
+
+"noti_promo_title" = "Music Interval Quiz Master";
