--- a/MusicIntervalQuizMaster/ko.lproj/Localizable.strings
+++ b/MusicIntervalQuizMaster/ko.lproj/Localizable.strings
@@ -204,3 +204,14 @@
 "appstore_screenshots_3" = "틀렸다면 맞출때까지!\n누구나 음정 마스터";
 "appstore_screenshots_4" = "통계 기능을 이용해\n계획적인 학습 가능";
 "appstore_screenshots_5" = "문제 범위를 정하고\n방식도 내 마음대로 설정";
+
+"reminder_noti_title" = "리마인더 알람 설정";
+"reminder_noti_toggle" = "리마인더 알람 켜기";
+"for_every_day" = "매일:";
+
+"local_noti_body_1" = "🎶 오늘의 음정 🎶";
+"local_noti_body_2" = "\n알고 계셨나요? %@와 %@ 사이의 음정은";
+"local_noti_body_3" = "[%@] 입니다.";
+"local_noti_body_4" = "앱을 열어 더 많은 음정을 학습합시다!";
+
+"noti_promo_title" = "Music Interval Quiz Master";
