--- a/MusicIntervalQuizMaster/ko.lproj/Localizable.strings
+++ b/MusicIntervalQuizMaster/ko.lproj/Localizable.strings
@@ -218,3 +218,11 @@
 
 "no_alert_permission_title" = "알림이 허용되지 않음";
 "no_alert_permission_detail" = "이 앱에 대한 알림 기능이 꺼져 있기 때문에 리마인더 기능을 사용할 수 없습니다. 기기의 설정 > 앱 > Interval Master 로 들어가서 알림을 허용해주세요.";
+
+"csv_view" = "퀴즈 기록 보기";
+"csv_delete_all" = "모든 퀴즈 기록 삭제";
+"csv_header" = "퀴즈 풀이 기록";
+"csv_delete_alert_title" = "경고";
+"btn_del" = "삭제";
+"csv_delete_alert_message" = "이 명령을 실행하면 모든 퀴즈 기록이 삭제됩니다. 이 작업은 되돌릴 수 없습니다.";
+"export_csv" = "CSV로 내보내기";
