--- a/MusicIntervalQuizMaster/en.lproj/Localizable.strings
+++ b/MusicIntervalQuizMaster/en.lproj/Localizable.strings
@@ -226,3 +226,5 @@
 "btn_del" = "Delete";
 "csv_delete_alert_message" = "Executing this command will delete all quiz history. This action cannot be undone.";
 "export_csv" = "Export as CSV";  
+
+"new_session_start" = "New Session Started!";
