--- a/MusicIntervalQuizMaster/ja.lproj/Localizable.strings
+++ b/MusicIntervalQuizMaster/ja.lproj/Localizable.strings
@@ -228,3 +228,30 @@
 "export_csv" = "Export as CSV";
 
 "new_session_start" = "新しいセッションが始まりました！";
+
+"info_title" = "なぜ%@なのですか？";
+
+"info_1_1" = "1. 低い音と高い音の間の間隔を計算すると、%d度になります。";
+"info_1_2" = "  - インターバルの数字は、インターバルを形成する2つの音の音名または五線上の位置（線と間）を含めて、いくつの位置を占めているかを示します。";
+"info_1_3" = " このインターバルは1オクターブを超えるため、複合音程（重音程）です。複合音程は1オクターブを超える音程であり、まず片方の音を1オクターブ移動させて単純音程に変換します。その後、オクターブの数に7を掛けた値を単純音程に加えることで求められます。";
+"info_1_4" = " %1$@の結果は%2$dであるため、%3$@は%4$@と同じ性質を持ちます。";
+
+"info_2_1" = "2. 音程の大きさが%1$d度であり、半音の数が%2$dの場合、基本的に「%3$@」です。";
+
+"info_3_1" = "3. （両方の音に）臨時記号が付いていません。つまり、基本の音程から性質の変化はありません。";
+"info_3_2" = "3. （両方の音に）臨時記号が付いています。つまり、基本の音程から性質の変化はありません。";
+"info_3_3" = "3. ここで、低い位置の音が半音%2$dだけ%1$@されるため、音程の性質は%3$@になります。";
+"info_3_4" = "3. ここで、高い位置の音が半音%2$dだけ%1$@されるため、音程の性質は%3$@になります。";
+
+"info_from_to" = "（%1$@の音程から%2$@の音程へ）";
+
+"info_4_1" = "4. また、高い位置の音が半音%2$dだけ%1$@されるため、音程の性質は%3$@になります。";
+
+"info_therefore" = "したがって、最終的な音程は%@です。";
+
+"info_raised" = "上昇";
+"info_lowered" = "下降";
+"info_expanded" = "拡張";
+"info_shrinked" = "縮小";
+
+"info_ok" = "わかりました！";
