--- a/MusicIntervalQuizMaster/ko.lproj/Localizable.strings
+++ b/MusicIntervalQuizMaster/ko.lproj/Localizable.strings
@@ -228,3 +228,30 @@
 "export_csv" = "CSV로 내보내기";
 
 "new_session_start" = "새로운 세션이 시작되었습니다!";
+
+"info_title" = "왜 %@ 인가요?";
+
+"info_1_1" = "1. 낮은 음과 높은 음 사이의 간격을 계산하면 %d도입니다.";
+"info_1_2" = "  - 음정의 숫자는 음정을 이루는 두 음의 계이름(음이름) 또는 오선상의 위치(선과 공간)를 포함하여 몇 개의 위치를 차지하는지를 나타냅니다.";
+"info_1_3" = " 이 음정은 한 옥타브를 초과하므로 복합 음정(겹음정)입니다. 복합 음정은 한 옥타브를 넘는 음정으로, 먼저 한 음을 한 옥타브 이동하여 단순 음정으로 변환한 뒤, 옥타브 수에 7을 곱한 값을 단순 음정에 더하여 구합니다.";
+"info_1_4" = " %1$@의 결과는 %2$d이며, 따라서 %3$@는 %4$@와 동일한 성질을 가집니다.";
+
+"info_2_1" = "2. 음정 크기가 %1$d도이고 반음 개수가 %2$d개라면 기본적으로 '%3$@'입니다.";
+
+"info_3_1" = "3. (양쪽 노트에) 임시표가 붙어 있지 않습니다. 즉, 기본 음정에서 성질 변화가 없습니다.";
+"info_3_2" = "3. (양쪽 노트에) 모두 임시표가 붙어 있습니다. 즉, 기본 음정에서 성질 변화가 없습니다.";
+"info_3_3" = "3. 여기서 낮은 위치의 음이 반음 %2$d만큼 %1$@하므로, 음정의 성질이 %3$@됩니다.";
+"info_3_4" = "3. 여기서 높은 위치의 음이 반음 %2$d만큼 %1$@하므로, 음정의 성질이 %3$@됩니다.";
+
+"info_from_to" = "(%1$@음정에서 %2$@음정으로)";
+
+"info_4_1" = "4. 또한, 높은 위치의 음이 반음 %2$d만큼 %1$@하므로, 음정의 성질이 %3$@됩니다.";
+
+"info_therefore" = "따라서 최종 음정은 %@입니다.";
+
+"info_raised" = "상승";
+"info_lowered" = "감소";
+"info_expanded" = "확장";
+"info_shrinked" = "축소";
+
+"info_ok" = "알겠습니다!";
