--- a/MusicIntervalQuizMaster/ja.lproj/Localizable.strings
+++ b/MusicIntervalQuizMaster/ja.lproj/Localizable.strings
@@ -238,14 +238,14 @@
 
 "info_2_1" = "2. 音程の大きさが%1$d度であり、半音の数が%2$dの場合、基本的に「%3$@」です。";
 
-"info_3_1" = "3. （両方の音に）臨時記号が付いていません。つまり、基本の音程から性質の変化はありません。";
-"info_3_2" = "3. （両方の音に）臨時記号が付いています。つまり、基本の音程から性質の変化はありません。";
-"info_3_3" = "3. ここで、低い位置の音が半音%2$dだけ%1$@されるため、音程の性質は%3$@になります。";
-"info_3_4" = "3. ここで、高い位置の音が半音%2$dだけ%1$@されるため、音程の性質は%3$@になります。";
+"info_3_1" = "3. 両方の音に臨時記号が付いていません。つまり、基本の音程から性質の変化はありません。";
+"info_3_2" = "3. 両方の音に同じ臨時記号が付いています。つまり、基本の音程から性質の変化はありません。";
+"info_3_3" = "3. ここで、低い位置の音が%2$d半音だけ%1$@されるため、音程の性質は%3$@になります。";
+"info_3_4" = "3. ここで、高い位置の音が%2$d半音だけ%1$@されるため、音程の性質は%3$@になります。";
 
-"info_from_to" = "（%1$@の音程から%2$@の音程へ）";
+"info_from_to" = "（%1$@音程から%2$@音程へ）";
 
-"info_4_1" = "4. また、高い位置の音が半音%2$dだけ%1$@されるため、音程の性質は%3$@になります。";
+"info_4_1" = "4. また、高い位置の音が%2$d半音だけ%1$@されるため、音程の性質は%3$@になります。";
 
 "info_therefore" = "したがって、最終的な音程は%@です。";
 
