--- a/MusicIntervalQuizMaster/ko.lproj/Localizable.strings
+++ b/MusicIntervalQuizMaster/ko.lproj/Localizable.strings
@@ -238,14 +238,14 @@
 
 "info_2_1" = "2. 음정 크기가 %1$d도이고 반음 개수가 %2$d개라면 기본적으로 '%3$@'입니다.";
 
-"info_3_1" = "3. (양쪽 노트에) 임시표가 붙어 있지 않습니다. 즉, 기본 음정에서 성질 변화가 없습니다.";
-"info_3_2" = "3. (양쪽 노트에) 모두 임시표가 붙어 있습니다. 즉, 기본 음정에서 성질 변화가 없습니다.";
-"info_3_3" = "3. 여기서 낮은 위치의 음이 반음 %2$d만큼 %1$@하므로, 음정의 성질이 %3$@됩니다.";
-"info_3_4" = "3. 여기서 높은 위치의 음이 반음 %2$d만큼 %1$@하므로, 음정의 성질이 %3$@됩니다.";
+"info_3_1" = "3. 양쪽 노트 모두 임시표가 붙어 있지 않습니다. 즉, 기본 음정에서 성질 변화가 없습니다.";
+"info_3_2" = "3. 양쪽 노트 모두 동일한 임시표가 붙어 있습니다. 즉, 기본 음정에서 성질 변화가 없습니다.";
+"info_3_3" = "3. 여기서 낮은 위치의 음이 %2$d반음만큼 %1$@하므로, 음정의 성질이 %3$@됩니다.";
+"info_3_4" = "3. 여기서 높은 위치의 음이 %2$d반음만큼 %1$@하므로, 음정의 성질이 %3$@됩니다.";
 
 "info_from_to" = "(%1$@음정에서 %2$@음정으로)";
 
-"info_4_1" = "4. 또한, 높은 위치의 음이 반음 %2$d만큼 %1$@하므로, 음정의 성질이 %3$@됩니다.";
+"info_4_1" = "4. 또한, 높은 위치의 음이 %2$d반음만큼 %1$@하므로, 음정의 성질이 %3$@됩니다.";
 
 "info_therefore" = "따라서 최종 음정은 %@입니다.";
 
