--- a/MusicIntervalQuizMaster/ja.lproj/Localizable.strings
+++ b/MusicIntervalQuizMaster/ja.lproj/Localizable.strings
@@ -258,3 +258,5 @@
 "loc.quiz_setting_change_warning" = "クイズ中に出題範囲の設定が変更されたため、再開する必要があります。現在のセッションを続けた場合、変更内容は反映されません。";
 "loc.all_intervals" = "すべての音程";
 "loc.select_all_intervals_in_degree" = "度数内のすべての音程を選択";
+
+"loc.degree_semitone" = "度数/半音数";
