Chore: add explain to IntervalMovement picture

--- a/MusicIntervalQuizMaster/en.lproj/Localizable.strings
+++ b/MusicIntervalQuizMaster/en.lproj/Localizable.strings
@@ -260,3 +260,5 @@
 "loc.select_all_intervals_in_degree" = "Select All Intervals in Degree";
 
 "loc.degree_semitone" = "Deg./Sem.";
+"loc.interval_shrink" = "As the interval\ngets smaller ←←←";
+"loc.interval_exapnd" = "As the interval\n→→→ gets larger";
